apps/site-1.kingakati.com/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-1.kingakati.com-ingress
  namespace: site-1.kingakati.com
  annotations:
    cert-manager.io/issuer: site-1.kingakati.com-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - site-1.kingakati.com
      secretName: site-1.kingakati.com-tls-secret
  rules:
    - host: site-1.kingakati.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: site1-svc
                port:
                  number: 80
